working on carousel

--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -52,8 +52,15 @@
       </div>
 
       <div class="artist-content">
-        <div class="artist-image-carousal">
-          <img src="../../assets/images/roster/powdr/band-pic1.webp" alt="Band Photo" class="artist-image">
+        <div class="artist-image-carousel">
+          <button class="carousel-button left">◀</button>
+
+          <div class="carousel-track">
+            <img class="artist-image" src="../../assets/images/roster/powdr/band-pic1.webp" alt="Artist image 1">
+            <img class="artist-image" src="../../assets/images/roster/powdr/band-pic2.webp" alt="Artist image 2">
+          </div>
+
+          <button class="carousel-button right">▶</button>
         </div>
 
         <div class="artist-interactables">
@@ -236,7 +243,11 @@
     </footer>
 
     <!-- Scripts -->
-
+    <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
+    <script src="../../assets/scripts/CartToggleSticky.js"></script>
+    <script src="../../assets/scripts/ProductZoom.js"></script>
+    <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
+    <script src="../../assets/scripts/Carousel.js"></script>
 
     </body>
 </html>
