--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -56,8 +56,12 @@
           <button class="carousel-button left">◀</button>
 
           <div class="carousel-track">
-            <img class="artist-image" src="../../assets/images/roster/powdr/band-pic1.webp" alt="Artist image 1">
-            <img class="artist-image" src="../../assets/images/roster/powdr/band-pic2.webp" alt="Artist image 2">
+            <div class="carousel-slide">
+              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic1.webp" alt="Artist image 1">
+            </div>
+            <div class="carousel-slide">
+              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic2.webp" alt="Artist image 2">
+            </div>
           </div>
 
           <button class="carousel-button right">▶</button>
@@ -84,7 +88,7 @@
         <p>
           Introducing Powdr (officially spelled “powdr”) — a unique and refreshing addition to the Oklahoma rock scene. Their music offers a handful of sounds such as indie-rock, krautrock, alternative, and a pinch of psych—all rolled up into one big beautiful experience. While Powdr are seemingly the “new kids on the block,” individually they are no strangers to the music scene of Oklahoma and beyond. 
           <br><br>
-          The members of Powdr have maintained a musical relationship with one another for over 15 years—something that, for them, has always come naturally. Their chemistry and longtime friendship has served as a solid basis for the music they create together. Consisting of members Kilyn Massey (bass, vocals), Joshua Peck (guitar, vocals), Peyton Wilson (guitar, keyboard, vocals), and Brent Hodge (drums, vocals), Powdr showcases what a four-piece band can really do. From small house shows, to festival lineups supporting big indie heroes, Powdr’s individual members have so much experience under their belt. Despite what might seem like just the beginning, Powdr has been simmering for some time, foreshadowing their imminent success. 
+          The members of Powdr have maintained a musical relationship with one another for over 15 years—something that, for them, has always come naturally. Their chemistry and longtime friendship has served as a solid basis for the music they create together. Consisting of members Kilyn Massey (bass, vocals), Joshua Peck (guitar, vocals), Peyton Wilson (guitar, keyboard, vocals), and Brent Hodge (drums, vocals), Powdr showcases what a four-piece band can really do. From small house shows, to festival lineups supporting big indie heroes, Powdr’s individual members each bring a wealth of experience to the table. Despite what might seem like just the beginning, Powdr has been simmering for some time, foreshadowing their imminent success. 
           <br><br>
           In the summer of 2025 Powdr looks forward to their debut EP “Settle Pain”, which releases everywhere July 25th. This wonderfully cohesive release opens strongly with two singles “Marie’s Cart” and “The Line” as well as corresponding videos for each. 
           <br><br>
