--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -100,6 +100,10 @@
 
       <div class="video-section">
         <h1 class="video-heading">VIDEO</h1>
+        <div class="video-container">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/erze4BZoHdE?si=zaBE9zNKc90Doio8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/E0gc27Z-f70?si=cTZyYWrL2krhYBzw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
       </div>
 
       <div class="press-section">
