--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -97,87 +97,34 @@
           Powdr has demonstrated lasting power, ambition, and a strong sense of community in their pursuit to take their music as far as it can go.
         </p>
       </div>
-
-      <div class="video-section">
-        <h1 class="video-heading">VIDEO</h1>
-        <div class="video-container">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/erze4BZoHdE?si=zaBE9zNKc90Doio8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/E0gc27Z-f70?si=cTZyYWrL2krhYBzw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-      </div>
-
-      <div class="press-section">
-        <h1 class="press-heading">PRESS</h1>
-      </div>
-
     </main>
 
+    <section class="video-section">
+      <h1 class="video-heading">VIDEO</h1>
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/erze4BZoHdE?si=zaBE9zNKc90Doio8" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/E0gc27Z-f70?si=cTZyYWrL2krhYBzw" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </section>
+
+
+    <!-- <div class="press-section">
+      <h1 class="press-heading">PRESS</h1>
+    </div> -->
+
+    
+
     <!-- Related Merch Section -->
-    <section class="related-merch-section">
+    <!-- <section class="related-merch-section">
       <div class="related-merch-content">
-        <!-- Rainbow Container Top -->
+        
         <div class="rainbow-container-top">
           <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
         </div>
 
-        <!-- Store Section -->
         <div class="store-section">
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
-
-            <a href="../mcr-002/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../mcr-005/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Sweetest Pot</p>
-                    <p class="merch-block-product-name">Burner Tape, Vol. 2 - Cassette</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../mcr-004/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Toad Socks</p>
-                    <p class="merch-block-product-name">Pond - CASSETTE</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
 
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
@@ -200,12 +147,11 @@
           </div>
         </div>
 
-        <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
           <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer Section -->
     <footer class="footer">
