--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -5,7 +5,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>powdr</title>
+    <title>powdr - EPK</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -50,100 +50,81 @@
         <h1 class="artist-name">powdr</h1>
         <p class="artist-location">OKLAHOMA CITY, OK</p>
       </div>
-      <div class="artist-image-container">
-        <img src="../../assets/images/roster/cryhard/roster-pic.webp" alt="Band Photo" class="artist-image">
-      </div>
-      <div class="artist-interactables">
-        <div class="player-container">
-          <div class="bandcamp-player">
-            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
+
+      <div class="artist-content">
+        <div class="artist-image-carousel">
+          <button class="carousel-button left">◀</button>
+
+          <div class="carousel-track">
+            <div class="carousel-slide">
+              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic1.webp" alt="Artist image 1">
+            </div>
+            <div class="carousel-slide">
+              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic2.webp" alt="Artist image 2">
+            </div>
           </div>
-          <div class="player-spacer"></div>
+
+          <button class="carousel-button right">▶</button>
         </div>
-        <div class="artist-social-icons">
-          <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook"></a>
-          <a href=""><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
-          <a href=""><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
-          <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok"></a>
+
+        <div class="artist-interactables">
+          <div class="bandcamp-player">
+            <iframe style="border: 0; width: 400px; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=1161596957/size=large/bgcol=ffffff/linkcol=333333/artwork=small/transparent=true/" seamless><a href="https://powdr.bandcamp.com/album/a-pair-of-lovelies">A Pair of Lovelies by powdr</a></iframe>
+          </div>
+          <div class="artist-contact">
+            <p>Email: powdr.okc@gmail.com</p>
+            <p>Phone: 405-473-3295</p>
+          </div>
+          <div class="artist-socials">
+            <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook"></a> -->
+            <a href="https://www.instagram.com/powdr.band/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
+            <a href="https://www.youtube.com/channel/UCpk0vs8ECEMZzpmkhWxAqig"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
+            <!-- <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok"></a> -->
+          </div>
         </div>
       </div>
+
       <div class="description-section">
         <p>
-          powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr
+          Introducing Powdr (officially spelled “powdr”) — a unique and refreshing addition to the Oklahoma rock scene. Their music offers a handful of sounds such as indie-rock, krautrock, alternative, and a pinch of psych—all rolled up into one big beautiful experience. While Powdr are seemingly the “new kids on the block,” individually they are no strangers to the music scene of Oklahoma and beyond. 
           <br><br>
-          powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr
+          The members of Powdr have maintained a musical relationship with one another for over 15 years—something that, for them, has always come naturally. Their chemistry and longtime friendship has served as a solid basis for the music they create together. Consisting of members Kilyn Massey (bass, vocals), Joshua Peck (guitar, vocals), Peyton Wilson (guitar, keyboard, vocals), and Brent Hodge (drums, vocals), Powdr showcases what a four-piece band can really do. From small house shows, to festival lineups supporting big indie heroes, Powdr’s individual members each bring a wealth of experience to the table. Despite what might seem like just the beginning, Powdr has been simmering for some time, foreshadowing their imminent success. 
           <br><br>
-          powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr
+          In the summer of 2025 Powdr looks forward to their debut EP “Settle Pain”, which releases everywhere July 25th. This wonderfully cohesive release opens strongly with two singles “Marie’s Cart” and “The Line” as well as corresponding videos for each. 
+          <br><br>
+          Prior to the release of their first EP, Powdr has already proven themselves to be a live performance heavy hitter—playing with hometown heroes like Mad Honey, Lust Online, Photocopy, and many more. Their stage presence keeps the audience completely engaged with full band vocal layers, members switching instruments mid-song, and the incredibly tight unity in their playing.
+          <br><br>
+          Powdr has demonstrated lasting power, ambition, and a strong sense of community in their pursuit to take their music as far as it can go.
         </p>
       </div>
     </main>
 
+    <section class="video-section">
+      <h1 class="video-heading">VIDEO</h1>
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/erze4BZoHdE?si=zaBE9zNKc90Doio8" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/E0gc27Z-f70?si=cTZyYWrL2krhYBzw" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </section>
+
+
+    <!-- <div class="press-section">
+      <h1 class="press-heading">PRESS</h1>
+    </div> -->
+
+    
+
     <!-- Related Merch Section -->
-    <section class="related-merch-section">
+    <!-- <section class="related-merch-section">
       <div class="related-merch-content">
-        <!-- Rainbow Container Top -->
+        
         <div class="rainbow-container-top">
           <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
         </div>
 
-        <!-- Store Section -->
         <div class="store-section">
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
-
-            <a href="../mcr-002/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../mcr-005/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Sweetest Pot</p>
-                    <p class="merch-block-product-name">Burner Tape, Vol. 2 - Cassette</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../mcr-004/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Toad Socks</p>
-                    <p class="merch-block-product-name">Pond - CASSETTE</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
 
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
@@ -166,12 +147,11 @@
           </div>
         </div>
 
-        <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
           <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer Section -->
     <footer class="footer">
@@ -217,7 +197,11 @@
     </footer>
 
     <!-- Scripts -->
-
+    <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
+    <script src="../../assets/scripts/CartToggleSticky.js"></script>
+    <script src="../../assets/scripts/ProductZoom.js"></script>
+    <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
+    <script src="../../assets/scripts/Carousel.js"></script>
 
     </body>
 </html>
