removed cassette player

--- a/store/mcr-007/index.html
+++ b/store/mcr-007/index.html
@@ -460,24 +460,6 @@
               </div>
             </a>
 
-            <a href="../new-005/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Hat</p>
-                    <p class="merch-block-product-name">Black Corduroy</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$30</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
             <a href="../mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
@@ -496,25 +478,41 @@
               </div>
             </a>
 
-            <a href="../new-001/" class="merch-link">
+            <a href="../mcr-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Portable Cassette Player</p>
-                    <p class="merch-block-product-name">Transparent</p>
+                    <p class="merch-block-artist-name">Sweetest Pot</p>
+                    <p class="merch-block-product-name">Burner Tape, Vol. 2 - Cassette</p>
                   </div>
                   <div class="merch-block-price-container">
-                    <div class="merch-block-price">$25</div>
+                    <div class="merch-block-price">$10</div>
                   </div>
                 </div>
               </div>
             </a>
 
-            
+            <a href="../new-005/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">Hat</p>
+                    <p class="merch-block-product-name">Black Corduroy</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$30</div>
+                  </div>
+                </div>
+              </div>
+            </a>
 
           </div>
         </div>
