--- a/store/new-001/index.html
+++ b/store/new-001/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Under Construction Redirect -->
+    <script>
+      window.location.href = "/assets/scripts/under-construction.html";
+    </script>
+
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
