--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           </div>
         </a>
 
-        <a href="store/new-001/" class="merch-link">
+        <!-- <a href="store/new-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
@@ -261,7 +261,7 @@
               </div>
             </div>
           </div>
-        </a>
+        </a> -->
 
       </div>
     </div>
