--- a/store/index.html
+++ b/store/index.html
@@ -175,7 +175,7 @@
             </div>
           </a>           
 
-          <a href="new-001/" class="merch-link">
+          <!-- <a href="new-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
@@ -191,7 +191,7 @@
                 </div>
               </div>
             </div>
-          </a>
+          </a> -->
 
           <a href="new-005/" class="merch-link">
             <div class="merch-block">
