--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -500,19 +500,19 @@
               </div>
             </a>
 
-            <a href="../new-005/" class="merch-link">
+            <a href="../mcr-003/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Hat</p>
-                    <p class="merch-block-product-name">Black Corduroy</p>
+                    <p class="merch-block-artist-name">CRYHARD</p>
+                    <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
-                    <div class="merch-block-price">$30</div>
+                    <div class="merch-block-price">$10</div>
                   </div>
                 </div>
               </div>
