--- a/store/mcr-004/index.html
+++ b/store/mcr-004/index.html
@@ -483,19 +483,19 @@
               </div>
             </a>
 
-            <a href="../new-001/" class="merch-link">
+            <a href="../../store/mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Portable Cassette Player</p>
-                    <p class="merch-block-product-name">Transparent</p>
+                    <p class="merch-block-artist-name">CRYHARD</p>
+                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
                   </div>
                   <div class="merch-block-price-container">
-                    <div class="merch-block-price">$25</div>
+                    <div class="merch-block-price">$10</div>
                   </div>
                 </div>
               </div>
