updated bandcamp and youtube links

--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -69,7 +69,7 @@
 
         <div class="artist-interactables">
           <div class="bandcamp-player">
-            <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1161596957/size=large/bgcol=ffffff/linkcol=333333/artwork=small/transparent=true/" seamless><a href="https://powdr.bandcamp.com/album/a-pair-of-lovelies">A Pair of Lovelies by powdr</a></iframe>
+            <iframe style="border: 0; width: 560px; height: 435px;" src="https://bandcamp.com/VideoEmbed?track=2927999088&bgcol=ffffff&linkcol=333333" mozallowfullscreen="1" webkitallowfullscreen="1" allowfullscreen="1" seamless></iframe>
           </div>
           <div class="artist-contact">
             <p>Email: powdr.okc@gmail.com</p>
@@ -102,8 +102,8 @@
     <section class="video-section">
       <h1 class="video-heading">VIDEO</h1>
       <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/erze4BZoHdE?si=zaBE9zNKc90Doio8" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/E0gc27Z-f70?si=cTZyYWrL2krhYBzw" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/erze4BZoHdE?si=F1c3C3a54lGT_5y-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/hxwpWvZL3Ck?si=SppTzaWl11VFecW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </section>
 
