add full private bandcamp link

--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -69,7 +69,7 @@
 
         <div class="artist-interactables">
           <div class="bandcamp-player">
-            <iframe style="border: 0; width: 560px; height: 435px;" src="https://bandcamp.com/VideoEmbed?track=2927999088&bgcol=ffffff&linkcol=333333" mozallowfullscreen="1" webkitallowfullscreen="1" allowfullscreen="1" seamless></iframe>
+            <iframe src="https://bandcamp.com/VideoEmbed?track=2927999088&bgcol=ffffff&linkcol=333333" mozallowfullscreen="1" webkitallowfullscreen="1" allowfullscreen="1" seamless></iframe>
           </div>
           <div class="artist-contact">
             <p>Email: powdr.okc@gmail.com</p>
@@ -85,6 +85,14 @@
       </div>
 
       <div class="description-section">
+        <p>
+            Listen to the full upcoming album, Settle Pain, here: 
+            <a href="https://bandcamp.com/private/L2F09Z5R" target="_blank" rel="noopener noreferrer">
+              https://bandcamp.com/private/L2F09Z5R
+            </a>
+            <br><br>
+          </p>
+
         <p>
           Introducing Powdr (officially spelled “powdr”) — a unique and refreshing addition to the Oklahoma rock scene. Their music offers a handful of sounds such as indie-rock, krautrock, alternative, and a pinch of psych—all rolled up into one big beautiful experience. While Powdr are seemingly the “new kids on the block,” individually they are no strangers to the music scene of Oklahoma and beyond. 
           <br><br>
