--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </p>
         <p><strong>Limited to 40 copies.</strong></p>
         <button class="pre-order-button" onclick="location.href='store/mcr-007/'">
-          PRE-ORDER
+          BUY NOW
         </button>        
       </div>
     </div>
