removed pre order text

--- a/store/mcr-007/index.html
+++ b/store/mcr-007/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">Settle Pain (PRE-ORDER)</h1>
+          <h1 class="product-title">Settle Pain</h1>
           <div class="whitespace"></div>
           <h2 class="product-artist">powdr</h2>
           <div class="whitespace"></div>
