added midwest heartbreak cassette

--- a/index.html
+++ b/index.html
@@ -101,6 +101,24 @@
     <div class="store-section">
       <div class="store-grid">
 
+        <a href="store/mcr-008/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-008/mcr-008-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">panhandle.</p>
+                <p class="merch-block-product-name">midwest heartbreak - CASSETTE</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
+            </div>
+          </div>
+        </a>
+
         <a href="store/mcr-007/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
