panhandle home feature

--- a/index.html
+++ b/index.html
@@ -59,39 +59,28 @@
     <!-- Featured Release Section -->
     <div class="featured-release">
       <div class="featured-release-hero">
-      <img src="assets/images/products/mcr-007/mcr-007.webp" alt="Featured Release">
+      <img src="assets/images/home/panhandle-feature.webp" alt="Featured Release">
       </div>
 
       <div class="falling-shapes">
-        <img src="assets/images/effects/powdr/falling-piece1.webp" class="shape" style="--i:1;">
-        <img src="assets/images/effects/powdr/falling-piece2.webp" class="shape" style="--i:2;">
-        <img src="assets/images/effects/powdr/falling-piece3.webp" class="shape" style="--i:3;">
-        <img src="assets/images/effects/powdr/falling-piece4.webp" class="shape" style="--i:4;">
-        <img src="assets/images/effects/powdr/falling-piece5.webp" class="shape" style="--i:5;">
-        <img src="assets/images/effects/powdr/falling-piece6.webp" class="shape" style="--i:6;">
-        <img src="assets/images/effects/powdr/falling-piece7.webp" class="shape" style="--i:7;">
-        <img src="assets/images/effects/powdr/falling-piece8.webp" class="shape" style="--i:8;">
-        <img src="assets/images/effects/powdr/falling-piece9.webp" class="shape" style="--i:9;">
-        <img src="assets/images/effects/powdr/falling-piece10.webp" class="shape" style="--i:10;">
-        <img src="assets/images/effects/powdr/falling-piece11.webp" class="shape" style="--i:11;">
-        <img src="assets/images/effects/powdr/falling-piece12.webp" class="shape" style="--i:12;">
-        <img src="assets/images/effects/powdr/falling-piece13.webp" class="shape" style="--i:13;">
-        <img src="assets/images/effects/powdr/falling-piece14.webp" class="shape" style="--i:14;">
-        <img src="assets/images/effects/powdr/falling-piece15.webp" class="shape" style="--i:15;">
+        <img src="assets/images/effects/panhandle/leaf1.webp" class="shape" style="--i:1;">
+        <img src="assets/images/effects/panhandle/leaf2.webp" class="shape" style="--i:2;">
+        <img src="assets/images/effects/panhandle/leaf3.webp" class="shape" style="--i:3;">
+        <img src="assets/images/effects/panhandle/leaf4.webp" class="shape" style="--i:4;">
       </div>
 
 
       <div class="release-text">
         <h2 class="release-heading">LATEST RELEASE</h2>
-        <h3 class="release-title">SETTLE PAIN</h3>
+        <h3 class="release-title">midwest heartbreak</h3>
         <div class="rainbow-underline"></div>
         <p>
-          The highly anticipated debut release from powdr is here and we couldn’t be more excited.
+          The freshman album by Oklahoma’s panhandle is now on cassette for the very first time. 
           <br> <br>
-          Settle Pain provides an insane experience of indie, psych, kroutrock, and synth rock
+          Limited to 25 first edition HIFI real-time dubbed chocolate swirl cassettes with label stickers and numbered card. Hand dubbed, stamped, and packaged. 
         </p>
-        <p><strong>Limited to 40 copies.</strong></p>
-        <button class="pre-order-button" onclick="location.href='store/mcr-007/'">
+        <!-- <p><strong>Limited to 25 copies.</strong></p> -->
+        <button class="pre-order-button" onclick="location.href='store/mcr-008/'">
           BUY NOW
         </button>        
       </div>
