updated link colors on ios

--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -73,8 +73,8 @@
             <!-- <iframe src="https://bandcamp.com/VideoEmbed?track=2927999088&bgcol=ffffff&linkcol=333333" mozallowfullscreen="1" webkitallowfullscreen="1" allowfullscreen="1" seamless></iframe> -->
           </div>
           <div class="artist-contact">
-            <p>Email: powdr.okc@gmail.com</p>
-            <p>Phone: 405-473-3295</p>
+            <a href="mailto:powdr.okc@gmail.com" class="email-link">Email: powdr.okc@gmail.com</a>
+            <p>Phone: (405) 473-3295</p>
           </div>
           <div class="artist-socials">
             <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook"></a> -->
